ordenar oraciones vista

--- a/tecolotl-web/src/main/webapp/alumno/activity.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/activity.xhtml
@@ -141,14 +141,14 @@
                                         <div class="uk-width-1-2@m uk-position-relative">
                                             <div class="titulo-respuesta-ordenar">Respuesta</div>
 
-                                            <h:panelGroup layout="block" styleClass="respuestas-ordenar-lista" pt:uk-sortable="group: respuesta"/>
-                                            <h:panelGroup layout="block" styleClass="respuestas-ordenar-lista " pt:uk-sortable="group: respuesta"/>
-                                            <h:panelGroup layout="block" styleClass="respuestas-ordenar-lista " pt:uk-sortable="group: respuesta"/>
+                                            <h:panelGroup layout="block" styleClass="respuestas-ordenar-lista" pt:uk-sortable="group: respuesta; cls-custom: animacion"/>
+                                            <h:panelGroup layout="block" styleClass="respuestas-ordenar-lista " pt:uk-sortable="group: respuesta; cls-custom: animacion"/>
+                                            <h:panelGroup layout="block" styleClass="respuestas-ordenar-lista " pt:uk-sortable="group: respuesta; cls-custom: animacion"/>
                                             <h:graphicImage library="img" name="/mounstro/whom.svg" styleClass="img-titulo"/>
                                         </div>
 
                                     </h:panelGroup>
-                                     <h:panelGroup id="tablaRespuestas" style="" layout="block"  styleClass="respuestas-ordenar "  pt:uk-sortable="group: respuesta" >
+                                     <h:panelGroup id="tablaRespuestas" style="" layout="block"  styleClass="respuestas-ordenar "  pt:uk-sortable="group: respuesta; cls-custom: animacion" >
                                             <div class="respuesta">Lorem ipsum dolor sit amet.</div>
                                             <div class="respuesta">Lorem ipsum dolor sit amet.</div>
                                             <div class="respuesta"> Lorem ipsum dolor sit amet.</div>
