se esta resolviendo incidencia 28

--- a/tecolotl-web/src/main/webapp/alumno/mindmap/15.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/mindmap/15.xhtml
@@ -86,35 +86,42 @@
                 <div class="">
                     <div class="uk-position-relative caja-1">
                         <div class="uk-position-absolute titulo-mapa-15">
-                            <label class="parrafo-mapa-15 uk-form-label">#{alumno['map15.title.definition']}</label>
-                            <div class="uk-form-controls">
-                                <input class="uk-input" type="text"/>
+                            <div class="horizontal-form1">
+                                <label class="parrafo-mapa-15 uk-form-label">#{alumno['map15.title.definition']}</label>
+                                <div class="uk-form-controls">
+                                    <input class="uk-input"  type="text"/>
+                                </div>
                             </div>
-                            <label class="parrafo-mapa-15 uk-form-label">#{alumno['map15.title.sentence']}</label>
-                            <div class="uk-form-controls">
-                                <input class="uk-input" type="text"/>
+                            <div class="horizontal-form2">
+                                <label class="parrafo-mapa-15 uk-form-label">#{alumno['map15.title.sentence']}</label>
+                                <div class="uk-form-controls">
+                                    <input class="uk-input" type="text"/>
+                                </div>
                             </div>
-                            <label class="parrafo-mapa-15 uk-form-label">#{alumno['map15.title.part']}</label>
-                            <div class="uk-form-controls">
-                                <input class="uk-input" type="text"/>
+                            <div class="horizontal-form3">
+                                <label class="parrafo-mapa-15 uk-form-label">#{alumno['map15.title.part']}</label>
+                                <div class="uk-form-controls">
+                                    <input class="uk-input" type="text"/>
+                                </div>
                             </div>
                         </div>
                     </div>
+
                     <div class="parrafo-mapa-15 uk-position-relative subtitulo-15 caja-2 uk-visible@m">
-                        <span class="uk-position-absolute subtitulo-15 uk-display-inline-block">
+                        <div class="uk-position-absolute subtitulo-15 uk-display-inline-block">
                             <label class="parrafo-mapa-15 uk-form-label">#{alumno['map15.title.picture']}</label>
                             <div class="uk-form-controls">
-                                <input class="uk-input" type="text"/>
+                                <input class="uk-input tamaño-input" type="text"/>
                             </div>
-                        </span>
-
+                        </div>
                     </div>
-                    <div class="parrafo-mapa-15 uk-position-absolute caja-4 uk-visible@m">
+
+                    <div class="uk-position-absolute caja-4 uk-visible@m">
                             <span class="subtitulo-15 uk-display-inline-block">
                                 #{alumno['map15.title.vocabulary']}
                             </span>
                     </div>
-                    <div class="parrafo-mapa-15 uk-position-absolute caja-5 uk-visible@m">
+                    <div class="uk-position-absolute caja-5 uk-visible@m">
                             <span class="subtitulo-15 uk-display-inline-block">
                                 #{alumno['map15.title.study']}
                             </span>
