se terminan los estilos de mapa15

--- a/tecolotl-web/src/main/webapp/alumno/mindmap/15.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/mindmap/15.xhtml
@@ -110,9 +110,6 @@
                     <div class="parrafo-mapa-15 uk-position-relative subtitulo-15 caja-2 uk-visible@m">
                         <div class="uk-position-absolute subtitulo-15 uk-display-inline-block">
                             <label class="parrafo-mapa-15 uk-form-label">#{alumno['map15.title.picture']}</label>
-                            <div class="uk-form-controls">
-                                <input class="uk-input tamaño-input" type="text"/>
-                            </div>
                         </div>
                     </div>
 
@@ -127,7 +124,7 @@
                             </span>
                     </div>
 
-                    <h3 class="parrafo-mapa-15 uk-hidden@m uk-text-center">#{alumno['map15.title.vocabulary.study']}</h3>
+                    <h3 class="parrafo-mapa-15 uk-hidden@m">#{alumno['map15.title.vocabulary.study']}</h3>
 
                     <div class="uk-position-relative caja-3">
                         <form action="" class="uk-form-stacked">
