--- a/tecolotl-web/src/main/webapp/alumno/activity.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/activity.xhtml
@@ -123,36 +123,56 @@
                            </h:panelGroup>
                         </li>
                         <li class="match uk-margin-small-top ">
-                                    <h:panelGroup layout="block" styleClass="caja-preguntas-ordenar uk-grid" pt:uk-grid="">
+                            <h:form id="formulario-relacionar">
+                                    <h:panelGroup layout="block" styleClass="caja-preguntas-ordenar uk-grid scroll-drag" pt:uk-grid="" rendered="#{empty relacionarOracionControlador.tareaRelacionarOracionModeloLista[0].respuesta}">
                                         <div class="uk-width-1-2@m uk-position-relative">
-                                            <div class="titulo-respuesta-ordenar " >Pregunta</div>
+                                            <div class="titulo-respuesta-ordenar " >#{alumno['title.match.sentence.question']}</div>
+                                            <ui:repeat value="#{relacionarOracionControlador.tareaRelacionarOracionModeloLista}" var="relacionarOracion">
+                                                <div class="pregunta-ordenar">
+                                                    #{relacionarOracion.relacionarOracionModelo.pregunta}
+                                                </div>
 
-                                            <div class="pregunta-ordenar">
-                                                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                                            </div>
-                                            <div class="pregunta-ordenar">
-                                                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                                            </div>
-                                            <div class="pregunta-ordenar">
-                                                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                                            </div>
-                                            <h:graphicImage library="img" name="/mounstro/who.svg" styleClass="img-titulo"/>
+                                            </ui:repeat>
+                                            <h:graphicImage library="img" name="/mounstro/who.svg" styleClass="img-titulo-1"/>
                                         </div>
                                         <div class="uk-width-1-2@m uk-position-relative">
-                                            <div class="titulo-respuesta-ordenar">Respuesta</div>
+                                            <div class="titulo-respuesta-ordenar">#{alumno['title.match.sentence.answer']}</div>
+                                            <ui:repeat value="#{relacionarOracionControlador.tareaRelacionarOracionModeloLista}" var="relacionarOracion">
 
-                                            <h:panelGroup layout="block" styleClass="respuestas-ordenar-lista" pt:uk-sortable="group: respuesta; cls-custom: animacion"/>
-                                            <h:panelGroup layout="block" styleClass="respuestas-ordenar-lista " pt:uk-sortable="group: respuesta; cls-custom: animacion"/>
-                                            <h:panelGroup layout="block" styleClass="respuestas-ordenar-lista " pt:uk-sortable="group: respuesta; cls-custom: animacion"/>
-                                            <h:graphicImage library="img" name="/mounstro/whom.svg" styleClass="img-titulo"/>
+                                                <h:panelGroup layout="block" styleClass="respuestas-ordenar-lista" pt:uk-sortable="group: respuesta; cls-custom: animacion">
+                                                    #{relacionarOracion.respuesta != null ? relacionarOracionControlador.respuestaVal(relacionarOracion.respuesta) : ""}
+                                                </h:panelGroup>
+                                            </ui:repeat>
+                                            <h:graphicImage library="img" name="/mounstro/whom.svg" styleClass="img-titulo-2"/>
                                         </div>
-
                                     </h:panelGroup>
-                                     <h:panelGroup id="tablaRespuestas" style="" layout="block"  styleClass="respuestas-ordenar "  pt:uk-sortable="group: respuesta; cls-custom: animacion" >
-                                            <div class="respuesta">Lorem ipsum dolor sit amet.</div>
-                                            <div class="respuesta">Lorem ipsum dolor sit amet.</div>
-                                            <div class="respuesta"> Lorem ipsum dolor sit amet.</div>
+                                    <h:panelGroup layout="block" styleClass="uk-grid padre contenedor-matching" pt:uk-grid="" rendered="#{not empty relacionarOracionControlador.tareaRelacionarOracionModeloLista[0].respuesta}">
+                                        <div class="columna-pregunta uk-width-expand">
+                                            <h:dataTable styleClass="tabla-ordenar uk-table-middle"
+                                                         value="#{relacionarOracionControlador.tareaRelacionarOracionModeloLista}"
+                                                         headerClass="titulo-tabla uk-text-center"
+                                                         rowClasses="cuerpo-tabla uk-text-center"
+                                                         var="relacionarOracion">
+                                                <h:column>
+                                                    <f:facet name="header">#{alumno['title.match.sentence.question']}</f:facet>#{relacionarOracion.relacionarOracionModelo.pregunta}
+                                                </h:column>
+                                                <h:column>
+                                                    <f:facet name="header">#{alumno['title.match.sentence.answer']}</f:facet>#{relacionarOracionControlador.buscaPalabra(relacionarOracion.respuesta)}
+                                                </h:column>
+                                            </h:dataTable>
+                                        </div>
+                                        <span class="realizado movimiento">Respondido</span>
+                                    </h:panelGroup>
+                                     <h:panelGroup id="tablaRespuestas" style="" layout="block"  styleClass="respuestas-ordenar scroll-drag"  pt:uk-sortable="group: respuesta; cls-custom: animacion" >
+                                         <ui:repeat value="#{relacionarOracionControlador.desordenaLista(relacionarOracionControlador.tareaRelacionarOracionModeloLista)}" var="preRespuestas">
+                                            <div class="respuesta" data-id="#{preRespuestas.relacionarOracionModelo.id}" >#{relacionarOracion.respuesta != null ? preRespuestas.relacionarOracionModelo.respuesta : preRespuestas.relacionarOracionModelo.respuesta}</div>
+                                         </ui:repeat>
                                      </h:panelGroup>
+                                <h:inputHidden id="respuestaOraciones" value="#{relacionarOracionControlador.idRespuesta}"/>
+                                <h:commandButton id="buttonEnviar" style="" onclick="recuperaDatos()" styleClass="boton-enviar uk-margin"  value="Send">
+                                    <f:ajax listener="#{relacionarOracionControlador.llenarTareaModelo()}" execute="@form"/>
+                                </h:commandButton>
+                            </h:form>
                         </li>
                         <li class="order-words">
                             <h1 class="uk-text-center lescuadron" style="color: white">Ordena las palabras en el orden correspondiente</h1>
