se da estilo a boton enviar de mapa-mental 14

--- a/tecolotl-web/src/main/webapp/alumno/mindmap/14.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/mindmap/14.xhtml
@@ -131,7 +131,8 @@
                         <h:commandButton id="boton-enviar-mapa-mental-escritorio"
                                          value="#{boton['submit']}"
                                          rendered="#{empty mapaMentalControlador.tareaMapaMentalModeloLista[0].respuesta}"
-                                         action="#{mapaMentalControlador.respondeMapaMental}"/>
+                                         action="#{mapaMentalControlador.respondeMapaMental}"
+                                         styleClass="boton-enviar"/>
                     </h:form>
                 </div>
                 <div class="uk-hidden@m">
