se da estilo a boton enviar de mapa-mental 13

--- a/tecolotl-web/src/main/webapp/alumno/mindmap/13.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/mindmap/13.xhtml
@@ -373,7 +373,8 @@
                     <h:commandButton id="boton-enviar-mapa-mental-movil"
                                      value="#{boton['submit']}"
                                      rendered="#{empty mapaMentalControlador.tareaMapaMentalModeloLista[0].respuesta}"
-                                     action="#{mapaMentalControlador.respondeMapaMental}"/>
+                                     action="#{mapaMentalControlador.respondeMapaMental}"
+                                     styleClass="boton-enviar"/>
                 </h:form>
 <!--                Version para Moviles-->
                 <h:form styleClass="contenedor-formularios uk-hidden@m">
